fix(header): Increase z-index for improved header stacking context

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -2,7 +2,7 @@
 
 header {
   position: fixed;
-  z-index: 1;
+  z-index: 2;
 
   box-sizing: border-box;
   height: 80px;
